--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -74,15 +74,12 @@ section{
 .sec3{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(146, 205, 90)
 
 }
 
 .sec4{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(194, 205, 90)
-
 }
 
 .sec5{
@@ -393,7 +390,7 @@ section{
         img{
             width: 100%;
             height: 300px;
-            object-fit: contain;
+            object-fit: cover;
             border-radius: 15px;
         }
         .hover-items{
@@ -452,7 +449,64 @@ section{
 
 .portfolio-item:hover .hover-items{
     opacity: 1;
+    transform: scale(1);
 }
+
+//Blogs Section
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+    margin-top: 3rem;
+    .blog{
+        position: relative;
+        background-color: var(--color-grey-5);
+        border-radius: 5px;
+        box-shadow: 1px 1px 20px rgba(0,0,0,1);
+        transition: all .4s ease-in-out;
+        &:hover{
+            box-shadow: 1px 1px 20px rgba(0, 0, 0, .3);
+            transform: translateY(-5px);
+            transition: all .4s ease-in-out;
+            img{
+                filter: greyscale(0);
+                transform: scale(1.1);
+                box-shadow: 0px 4px 15px rgba(0,0,0,0.8);
+
+            }
+        }
+        img{
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            filter: grayscale(100%);
+            transition: all .4s ease-in-out;
+        }
+        .blog-text{
+            margin-top: -7px;
+            padding: 1.1rem;
+            border-top: 8px solid var(--color-secondary);
+            h4{
+                font-size: 1.5rem;
+                margin-bottom: .7rem;
+                transition: all .4s ease-in-out;
+                cursor: pointer;
+                &:hover{
+                    color: var(--color-secondary);
+                }
+            }
+            p{
+                color: var(--color-grey-2);
+                line-height: 2rem;
+                padding-bottom: 1rem;
+            }
+        }
+    }
+}
+
+
 /*Independed components*/
 .btn-con{
     display: flex;
