--- a/styles/styles.css
+++ b/styles/styles.css
@@ -686,6 +686,19 @@ section {
   padding-bottom: 1rem;
 }
 
+.contact-content-con {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 3.5rem;
+}
+
+.contact-content-con .left-contact {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+
 /*Independed components*/
 .btn-con {
   display: -webkit-box;
@@ -752,7 +765,7 @@ section {
 }
 
 .main-title {
-  text-align: left;
+  text-align: center;
 }
 
 .main-title h2 {
