--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -506,6 +506,15 @@ section{
     }
 }
 
+//Contact Section
+
+.contact-content-con{
+    display: flex;
+    padding-top: 3.5rem;
+    .left-contact{
+        flex: 2;
+    }
+}
 
 /*Independed components*/
 .btn-con{
@@ -554,7 +563,7 @@ section{
 }
 
 .main-title{
-    text-align: left;
+    text-align: center;
     h2{
         position: relative;
         text-transform: uppercase;
