--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,5 @@
+
+
 *{
     margin: 0;
     padding: 0;
@@ -54,9 +56,10 @@ a{
 }
 
 header{
-    height: 100vh;
+    min-height: 100vh;
     color: var(--color-white);
     overflow: hidden;
+    
 }
 
 section{
@@ -720,3 +723,6 @@ section{
         }
     }
 }
+
+
+@import './media';
