--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1041,6 +1041,11 @@ section {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
+  .blogs {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
   .section {
     padding: 2rem 2.5rem !important;
   }
