--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -4,7 +4,7 @@
         padding: 0;
     }
     header .right-header{
-        padding: 2rem !important;
+        padding: 0 !important;
     }
 
     .theme-btn{
@@ -69,15 +69,43 @@
         grid-template-columns: 1fr;
         padding-bottom: 6rem;
     }
+
     .blogs{
         grid-template-columns: 1fr;
         padding-bottom: 6rem;
+    }
+
+    .contact-content-con{
+        flex-direction: column;
+        .right-contact{
+            margin-left: 0;
+            margin-top: 2.5rem;
+        }
+    }
+    .contact-content-con .right-contact .i-c-2{
+        flex-direction: column;
+    }
+    
+    .contact-content-con .right-contact .i-c-2 :last-child{
+        margin-left: 0;
+        margin-top: 1.5rem;
     }
     
     .section{
         padding: 2rem 2.5rem !important;
     }
 
+    .main-title{
+        h2{
+            font-size: 2rem;
+            span{
+                font-size: 2.5rem;
+            }
+            .bg-text{
+                font-size: 3rem;
+            }
+        }
+    }
     .controls{
         top: auto;
         bottom: 0;
