--- a/styles/styles.css
+++ b/styles/styles.css
@@ -990,7 +990,7 @@ section {
     padding: 0;
   }
   header .right-header {
-    padding: 2rem !important;
+    padding: 0 !important;
   }
   .theme-btn {
     width: 50px;
@@ -1051,8 +1051,37 @@ section {
         grid-template-columns: 1fr;
     padding-bottom: 6rem;
   }
+  .contact-content-con {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-content-con .right-contact {
+    margin-left: 0;
+    margin-top: 2.5rem;
+  }
+  .contact-content-con .right-contact .i-c-2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact-content-con .right-contact .i-c-2 :last-child {
+    margin-left: 0;
+    margin-top: 1.5rem;
+  }
   .section {
     padding: 2rem 2.5rem !important;
+  }
+  .main-title h2 {
+    font-size: 2rem;
+  }
+  .main-title h2 span {
+    font-size: 2.5rem;
+  }
+  .main-title h2 .bg-text {
+    font-size: 3rem;
   }
   .controls {
     top: auto;
