--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -232,6 +232,7 @@ section{
             }
         }
         p{
+            text-align: justify;
             margin: 1.5rem 0;
             line-height: 2rem;
         }
