add resume document and image to homepage

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,7 +25,7 @@
 
 .light-mode{
     --color-primary: #ffffff;
-    --color-secondary: #f56692;
+    --color-secondary: #16e0bd;
     --color-white: #454e56;
     --color-black: #000;
     --color-grey0: #f8f8f8;
@@ -369,8 +369,9 @@ section{
 
 /*Timeline*/
 .timeline{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: 1fr;
     grid-gap: 2rem;
     padding-bottom: 3rem;
     .timeline-item{
@@ -392,7 +393,15 @@ section{
                 font-size: 1.3rem;
             }
         }
+        .timeline-text{
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
         .tl-duration{
+            
             padding: .2rem .6rem;
             background-color: var(--color-grey-5);
             border-radius: 15px;
@@ -402,6 +411,7 @@ section{
             font-weight: 500;
         }
         h5{
+            
             padding: 1rem 0;
             text-transform: uppercase;
             font-size: 1.3rem;
@@ -413,7 +423,9 @@ section{
             }
         }
         p{
+            text-align: left;
             color: var(--color-grey-2);
+            padding-bottom: .7rem;
         }
     }
 }
