--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,7 @@
 
 .light-mode {
   --color-primary: #ffffff;
-  --color-secondary: #f56692;
+  --color-secondary: #16e0bd;
   --color-white: #454e56;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -490,10 +490,15 @@ section {
 
 /*Timeline*/
 .timeline {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   grid-gap: 2rem;
   padding-bottom: 3rem;
 }
@@ -527,6 +532,22 @@ section {
   font-size: 1.3rem;
 }
 
+.timeline .timeline-item .timeline-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
 .timeline .timeline-item .tl-duration {
   padding: .2rem .6rem;
   background-color: var(--color-grey-5);
@@ -551,7 +572,9 @@ section {
 }
 
 .timeline .timeline-item p {
+  text-align: left;
   color: var(--color-grey-2);
+  padding-bottom: .7rem;
 }
 
 .port-text {
