--- a/styles/styles.css
+++ b/styles/styles.css
@@ -767,68 +767,23 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-top: 3.5rem;
 }
 
-.contact-content-con .left-contact {
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
-}
-
-.contact-content-con .left-contact h4 {
-  margin-top: 1rem;
-  font-size: 2rem;
-  text-transform: uppercase;
-}
-
-.contact-content-con .left-contact p {
-  margin: 1rem 0;
-  line-height: 2rem;
-}
-
-.contact-content-con .left-contact .contact-info .contact-item {
+.contact-content-con .contact-icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.contact-content-con .left-contact .contact-info .contact-item p {
-  margin: .3rem 0 !important;
-  padding: 0 !important;
-}
-
-.contact-content-con .left-contact .contact-info .contact-item .icon {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 40px 1fr;
-      grid-template-columns: 40px 1fr;
-}
-
-.contact-content-con .left-contact .contact-info .contact-item .icon i {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 1.3rem;
-}
-
-.contact-content-con .left-contact .contact-icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 2rem;
 }
 
-.contact-content-con .left-contact .contact-icon a {
+.contact-content-con .contact-icon a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -849,15 +804,15 @@ section {
   transition: all .4s ease-in-out;
 }
 
-.contact-content-con .left-contact .contact-icon a:hover {
+.contact-content-con .contact-icon a:hover {
   background-color: var(--color-secondary);
 }
 
-.contact-content-con .left-contact .contact-icon a:hover i {
+.contact-content-con .contact-icon a:hover i {
   color: var(--color-primary);
 }
 
-.contact-content-con .left-contact .contact-icon a i {
+.contact-content-con .contact-icon a i {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -870,18 +825,11 @@ section {
   font-size: 1.3rem;
 }
 
-.contact-content-con .right-contact {
-  -webkit-box-flex: 3;
-      -ms-flex: 3;
-          flex: 3;
-  margin-left: 3rem;
-}
-
-.contact-content-con .right-contact .input-control {
+.contact-content-con .input-control {
   margin: 1.5rem 0;
 }
 
-.contact-content-con .right-contact .input-control input, .contact-content-con .right-contact .input-control textarea {
+.contact-content-con .input-control input, .contact-content-con .input-control textarea {
   border-radius: 30px;
   font-weight: inherit;
   font-size: inherit;
@@ -895,17 +843,17 @@ section {
   resize: none;
 }
 
-.contact-content-con .right-contact .i-c-2 {
+.contact-content-con .i-c-2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.contact-content-con .right-contact .i-c-2 :last-child {
+.contact-content-con .i-c-2 :last-child {
   margin-left: 1.5rem;
 }
 
-.contact-content-con .right-contact .submit-btn {
+.contact-content-con .submit-btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
