--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -139,7 +139,7 @@ section{
     .control{
         padding: 1rem;
         cursor: pointer;
-        background-color: var(--color-grey-4);
+        background-color: var(--color-grey-5);
         width: 55px;
         height: 55px;
         border-radius: 50%;
@@ -163,7 +163,7 @@ section{
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    background-color: var(--color-grey-4);
+    background-color: var(--color-grey-5);
     cursor: pointer;
     position: fixed;
     display: flex;
@@ -578,6 +578,7 @@ section{
             align-items: center;
             color: var(--color-white);
             background-color: var(--color-grey-5);
+            box-shadow: var(--box-shadow-1);
             cursor: pointer;
             justify-content: center;
             width: 50px;
@@ -611,6 +612,7 @@ section{
             outline: none;
             border: none;
             background-color: var(--color-grey-5);
+            box-shadow: var(--box-shadow-1);
             width: 100%;
             color: var(--color-white);
             resize: none;
@@ -625,6 +627,10 @@ section{
     .submit-btn{
         display: flex;
         justify-content: center;
+        a{
+            box-shadow: var(--box-shadow-1);
+        }
+        
     }
 }
 
