--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -214,7 +214,7 @@ section{
                 transition: all .4s ease-in-out;
                 filter: grayscale(100%);
                 &:hover{
-                    filter: greyscale(0)
+                    filter: grayscale(0);
                 }
             }
         }
