--- a/styles/styles.css
+++ b/styles/styles.css
@@ -504,9 +504,23 @@ section {
 }
 
 .timeline .timeline-item {
+  border-radius: 5px;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+  -webkit-box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
   position: relative;
   padding-left: 3rem;
   border-left: 1px solid var(--color-grey-5);
+}
+
+.timeline .timeline-item:hover {
+  cursor: default;
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+  border: 1px, solid var(--color-secondary);
+  -webkit-box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+          box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
 }
 
 .timeline .timeline-item .tl-icon {
