--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -289,9 +289,12 @@ section{
             }
         }
     }
+    
     .left-about{
         text-align: center;
         padding-right: 5rem;
+        
+
         p{
             text-align: justify;
             line-height: 2rem;
@@ -375,6 +378,16 @@ section{
     grid-gap: 2rem;
     padding-bottom: 3rem;
     .timeline-item{
+        
+        border-radius: 5px;
+        transition: all .4s ease-in-out;
+        box-shadow: 1px 2px 15px rgba(0, 0, 0, .1);
+        &:hover{
+            cursor: default;
+            transform: translateY(-5px);
+            border: 1px, solid var(--color-secondary);
+            box-shadow: 1px 4px 15px rgba(0, 0, 0, .32)
+        }
         position: relative;
         padding-left: 3rem;
         border-left: 1px solid var(--color-grey-5);
