--- a/styles/styles.css
+++ b/styles/styles.css
@@ -563,6 +563,9 @@ section {
 }
 
 .timeline .timeline-item .tl-duration {
+  -webkit-box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+  margin-top: .5rem;
   padding: .2rem .6rem;
   background-color: var(--color-grey-5);
   border-radius: 15px;
