--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -414,7 +414,8 @@ section{
         }
 
         .tl-duration{
-            
+            box-shadow: 1px 2px 15px rgba(0, 0, 0, .1);
+            margin-top: .5rem;
             padding: .2rem .6rem;
             background-color: var(--color-grey-5);
             border-radius: 15px;
