change controls style

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -169,7 +169,7 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 3px 15px rgba(0, 0, 0, .3);
+    box-shadow: var(--box-shadow-1);
     transition: all .1 ease-in-out;
     &:active{
         transform: translateY(-3px);
