--- a/styles/styles.css
+++ b/styles/styles.css
@@ -212,8 +212,8 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: var(--box-shadow-1);
+          box-shadow: var(--box-shadow-1);
   -webkit-transition: all .1 ease-in-out;
   transition: all .1 ease-in-out;
 }
